# blackjk-netmon-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  Makefile  README.md
examples/: config.toml  run_examples.sh
scripts/: build-release.sh  build.sh  create-rpm.sh  network-monitor.service  setup.sh
src/: lib.rs  main.rs
src/analysis/: connections.rs  mod.rs  protocols.rs  statistics.rs
src/capture/: mod.rs  pcap_engine.rs  proc_parser.rs
src/config/: advanced_features.rs  mod.rs  settings.rs
src/firewall/: engine.rs  mod.rs  rules.rs  ui.rs
src/traffic/: analyzer.rs  inspector.rs  mod.rs
src/ui/: app.rs  mod.rs  protocol_view.rs
src/utils/: formatting.rs  mod.rs
src/visualization/: charts.rs  layouts.rs  mod.rs  widgets.rs
