[package]
name = "network-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
env_logger = "0.11.8"
ipnetwork = "0.20"
log = "0.4.27"
pcap = "1.0"
pnet = "0.34"
ratatui = "0.24"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
